--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "font-awesome": "^4.6.3",
     "fastclick": "^1.0.6",
     "nprogress": "^0.2.0",
+    "icheck" : "^1.0.2",
     "chart.js": "^2.0.2",
     "gauge.js": "^0.2.0",
     "bootstrap-progressbar": "^0.9.0"
@@ -25,6 +26,7 @@
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
+    "icheck" : "^1.0.2",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
