--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
+CLOUDINARY_API_KEY=448847331442197
+CLOUDINARY_API_SECRET=i6Tyk1iAFVelv2pUZ1LCR7yusmY
+CLOUDINARY_CLOUD_NAME=iist
+CLOUDINARY_BASE_URL=http://res.cloudinary.com/iist
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
