--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "jrm2k6/cloudder": "0.4.*",
+        "duncan3dc/speaker": "0.7.*",
         "laravel/framework": "5.3.*"
     },
     "require-dev": {
