--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "jrm2k6/cloudder": "0.4.*",
+        "laravel/scout": "1.*",
+        "algolia/algoliasearch-client-php": "~1.0",
         "duncan3dc/speaker": "0.7.*",
         "laravel/framework": "5.3.*"
     },
@@ -23,7 +25,8 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": ["app/Http/helpers.php"]
     },
     "autoload-dev": {
         "classmap": [
