fix cloundinary limited storage

--- a/.env.example
+++ b/.env.example
@@ -16,10 +16,10 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-CLOUDINARY_API_KEY=448847331442197
-CLOUDINARY_API_SECRET=i6Tyk1iAFVelv2pUZ1LCR7yusmY
-CLOUDINARY_CLOUD_NAME=iist
-CLOUDINARY_BASE_URL=http://res.cloudinary.com/iist
+CLOUDINARY_API_KEY=512317688716183
+CLOUDINARY_API_SECRET=-yHxCp9LQUFTvahF0EZjOYfXIys
+CLOUDINARY_CLOUD_NAME=loaphuongiist
+CLOUDINARY_BASE_URL=http://res.cloudinary.com/loaphuongiist
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
