--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,11 @@ CLOUDINARY_API_SECRET=-yHxCp9LQUFTvahF0EZjOYfXIys
 CLOUDINARY_CLOUD_NAME=loaphuongiist
 CLOUDINARY_BASE_URL=http://res.cloudinary.com/loaphuongiist
 
+CLOUDINARY_API_KEY2=981122135956682
+CLOUDINARY_API_SECRET2=HtYqMqGmmhc80_KVy7G8AWCS2fg
+CLOUDINARY_CLOUD_NAME2=loaphuongiist2
+CLOUDINARY_BASE_URL2=http://res.cloudinary.com/loaphuongiist2
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
